[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
 
[project]
name = "recflow"
version = "0.1.0"
description = "PyTorch recommendation engine from scratch — MF, NCF, SASRec, Two-Tower"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "optuna>=3.4.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]
 
[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]
 
[tool.setuptools.packages.find]
where = ["src"]